--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
 
         <div class="flex flex-col space-y-[3px]">
-            <button class="h-[40px] bg-red-500 text-white rounded-[5px]">Register</button>
+            <button type="submit" class="h-[40px] bg-red-500 text-white rounded-[5px]">Register</button>
         </div>
       </form>
     </div>
