--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
       <form class="space-y-[16px]" id="form">
         <div class="flex flex-col space-y-[3px]">
             <label class="font-bold">Name</label>
-            <input id="name" class="h-[40px] px-[10px] rounded-[5px] border border-[#E0E0E0] " type="text">
+            <input data-required="true" data-min="7" data-max="15" id="name" class="h-[40px] px-[10px] rounded-[5px] border border-[#E0E0E0] " type="text">
         </div>
 
         <div class="flex flex-col space-y-[3px]">
             <label class="font-bold">Surname</label>
-            <input id="surname" class="h-[40px] px-[10px] rounded-[5px] border border-[#E0E0E0] " type="text">
+            <input data-required="true" data-min="10" data-max="20" id="surname" class="h-[40px] px-[10px] rounded-[5px] border border-[#E0E0E0] " type="text">
         </div>
 
         <div class="flex flex-col space-y-[3px]">
             <label class="font-bold">Phone</label>
-            <input id="phone" class="h-[40px] px-[10px] rounded-[5px] border border-[#E0E0E0] " type="text">
+            <input  id="phone" class="h-[40px] px-[10px] rounded-[5px] border border-[#E0E0E0] " type="text">
         </div>
 
         <div class="flex flex-col space-y-[3px]">
