--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 
         <div class="flex flex-col space-y-[3px]">
             <label class="font-bold">Password</label>
-            <input id="Password" class="h-[40px] px-[10px] rounded-[5px] border border-[#E0E0E0] " type="text">
+            <input id="Password" data-required="true" class="h-[40px] px-[10px] rounded-[5px] border border-[#E0E0E0] " type="text">
         </div>
 
         <div class="flex flex-col space-y-[3px]">
             <label class="font-bold">repeat Password</label>
-            <input id="repeatPassword" class="h-[40px] px-[10px] rounded-[5px] border border-[#E0E0E0] " type="text">
+            <input id="repeatPassword" data-required="true" data-some="Password" class="h-[40px] px-[10px] rounded-[5px] border border-[#E0E0E0] " type="text">
         </div>
 
         <div class="flex flex-col space-y-[3px]">
