email verification feature is ready

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <div class="flex flex-col space-y-[3px]">
             <label class="font-bold">Email</label>
-            <input id="email" class="h-[40px] px-[10px] rounded-[5px] border border-[#E0E0E0] " type="text">
+            <input id="email" data-required="true" data-email="true" class="h-[40px] px-[10px] rounded-[5px] border border-[#E0E0E0] " type="text">
         </div>
 
         <div class="flex flex-col space-y-[3px]">
