--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <div class="flex flex-col space-y-[3px]">
             <label class="font-bold">Phone</label>
-            <input  id="phone" class="h-[40px] px-[10px] rounded-[5px] border border-[#E0E0E0] " type="text">
+            <input  id="phone" data-required="true" data-phone="true" data-max="10" class="h-[40px] px-[10px] rounded-[5px] border border-[#E0E0E0] " type="number">
         </div>
 
         <div class="flex flex-col space-y-[3px]">
